test/error/parser/struct-unexpected-token.dsk
let S = struct
    42
end
